<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Corte&amp;Confección</string>

    <string name="logo_desc">Logo</string>
    <string name="btn_comienza">Comienza</string>
    <string name="registrarse">Registrarse</string>

    <string name="descripcion_home">
        Inicia una nueva experiencia con Corte y Confección y descubre una nueva forma de ver el mundo.
    </string>
    <string name="comienza_btn2">Comienza</string>
    <string name="registrarse_home">Registrarse</string>
    <string name="descripcion_home2">Logo</string>
    <string name="registro">Registro</string>
    <string name="registro2">Registro</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repite_tu_contrase_a">Repite tu contraseña</string>
    <string name="acepto_t_rminos_y_condiciones">Acepto Términos y Condiciones</string>
    <string name="registrarse2">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_tienda">Mi tienda</string>
    <string name="inicio">inicio</string>
    <string name="catalogo">catalogo</string>
    <string name="favoritos">favoritos</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_lo">Contraseña</string>
    <string name="ingresar_btn_lo">Ingresar</string>
    <string name="nombre_app"><![CDATA[Corte&confección]]></string>
    <string name="mensaje_login">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="correo_login">Correo Electrónico</string>
    <string name="contrase_login">Contraseña</string>
    <string name="ingresar_login">Ingresar</string>
    <string name="recupera_tu_contrase_a">Recupera Tu Contraseña</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
    <string name="no_tienes_cuenta_reg_strate">No tienes cuenta? Regístrate</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="gesti_n_admin">Gestión Admin</string>
    <string name="usuarios">Usuarios</string>
    <string name="productos_destacados">Productos Destacados</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="editar_perfil_titulo">editar_perfil</string>
    <string name="cambiar_foto">cambiar_foto</string>
    <string name="correo">EdCorreo</string>
    <string name="nueva_contrase_a_opcional">nueva_contraseña</string>
    <string name="repetir_nueva_contrase_a">nuevaContraseña</string>
    <string name="guardar_cambios">guardar_cambios</string>
    <string name="Correo">Correo</string>
    <string name="nueva_contrase">Nueva Contraseña Opcional</string>
    <string name="repetir_nueva_contrase">Nueva Contraseña</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>

</resources>