<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fondo">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logoo"
            android:contentDescription="@string/logo_desc"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro2"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/azul_texto"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/re_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombres"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/re_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/re_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electr_nico"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/re_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/re_recontrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repite_tu_contrase_a"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/re_terminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acepto_t_rminos_y_condiciones"
            android:layout_marginTop="15dp"
            android:textColor="@color/azul_texto"/>

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/registrarse2"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/azul_oscuro"
            android:textColor="@color/blanco"/>

    </LinearLayout>

</ScrollView>