<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fondo">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logoo"
        android:contentDescription="@string/descripcion_home2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TÍTULO -->
    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/azul_texto"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- DESCRIPCIÓN -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_home"
        android:textColor="@color/azul_texto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- BOTÓN -->
    <Button
        android:id="@+id/btn_comienza"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/comienza_btn2"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:backgroundTint="@color/azul_oscuro"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- REGISTRO
    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse_home"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btn_comienza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>